--- a/Day1/CRM/backend/pom.xml
+++ b/Day1/CRM/backend/pom.xml
@@ -10,4 +10,12 @@
 		<artifactId>crm</artifactId>
 		<version>1.0.0</version>
 	</parent>
+
+	<dependencies>
+            <dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.13.2</version>
+            </dependency>
+	</dependencies>
 </project>
