--- a/Day3/CRM/main/pom.xml
+++ b/Day3/CRM/main/pom.xml
@@ -12,6 +12,11 @@
 	</parent>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.tektutor</groupId>
 			<artifactId>frontend</artifactId>
